syntax = "proto3";
option go_package = "github.com/beoboo/job-worker-service/protocol";

service JobScheduler {
  rpc Start(Job) returns (JobStatus) {}
  rpc Stop(JobId) returns (JobStatus) {}
  rpc Status(JobId) returns (JobStatus) {}
  rpc Output(JobId) returns (stream JobOutput) {}
}

message Job {
  string executable = 1;
  string args = 2;
}

message JobId {
  string id = 1;
}

message JobStatus {
  string id = 1;
  string status = 2;
}

message JobOutput {
  string channel = 1;
  string time = 2;
  string text = 3;
}